# the_research_council

./: README.md  app.py  pyproject.toml  test_azure.py  test_document.txt
src/the_council___research_tool/: azure_llm.py  crew.py  critique_agent.py  document_ingestion_agent.py  embeddings_agent.py  intelligent_analysis_agent.py  main.py  query_refinement_agent.py  research_agent.py  reviewer_agent.py  run_ngrok_simple.py  run_with_ngrok.py  start_external.py  streamlit_app.py  summarizer.py  tavily_agent.py  the_council.py
src/the_council___research_tool/chroma_db/: chroma.sqlite3
src/the_council___research_tool/config/: agents.yaml  tasks.yaml
